# cargo-newx

./: Cargo.toml  README.md
src/: main.rs
templates/: .gitignore  clippy.toml  rustfmt.toml
